<resources>
    <string name="app_name">Recipes Assistant</string>

    <string name="title_activity_recipe_detail">Recipe Detail</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="view_recipe">View Recipe</string>
    <string name="title_activity_settings">Settings</string>
    <string name="app_purpose">The purpose of this app is only studying about android app actions and slices. The code for this project is in Github and can be accessed by anyone interested.\n\nWe are open to suggestions and feedbacks. Please send an email to webanadev@gmail.com.</string>
    <string name="app_credits">Recipe images was from Flickr\nIcons from FlatIcon\nRecipe dataset from Github</string>
    <string name="see_privacy_policy">See Privacy Policy</string>
    <string name="loading_recipe">Loading recipe …</string>
    <string name="error_recipe_not_found">Could not find recipe.</string>
    <string name="open_app">Open app</string>
    <string name="nutella_pie">nutella pie</string>
    <string name="frozen_yogurt">frozen strawberry yogurt</string>
    <string name="unleavened_cheese_bread">unleavened cheese bread</string>
    <string name="cheese_bread">cheese bread</string>
    <string name="mac_and_cheese">mac and cheese</string>
    <string name="smoothie">smoothie</string>
    <string name="homemade_ice_cream">homemade ice cream</string>
    <string name="spoon_brigadeiro">spoon brigadeiro</string>
    <string name="search">Search</string>

    <string-array name="nutella_pie">
        <item>pie</item>
        <item>nutella</item>
        <item>pies</item>
        <item>hazelnut pie</item>
        <item>hazelnut</item>
        <item>hazelnut cream</item>
    </string-array>

    <string-array name="frozen_yogurt">
        <item>frozen yogurt</item>
        <item>yogurt</item>
        <item>frozen</item>
        <item>strawberry yogurt</item>
    </string-array>

    <string-array name="unleavened_cheese_bread">
        <item>unleavened</item>
    </string-array>

    <string-array name="cheese_bread">
        <item>powder cheese</item>
        <item>cheese rolls</item>
    </string-array>

    <string-array name="mac_and_cheese">
        <item>mac\'n cheese</item>
        <item>macaroni</item>
        <item>macaroni and cheese</item>
    </string-array>

    <string-array name="smoothie">
        <item>avocado smoothie</item>
        <item>avocado</item>
    </string-array>

    <string-array name="homemade_ice_cream">
        <item>ice cream</item>
    </string-array>

    <string-array name="spoon_brigadeiro">
        <item>brigadeiro</item>
    </string-array>
</resources>
